--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="blog.mrpeterl.com">Blog</a>
+            <a class="nav-link js-scroll-trigger" href="http://blog.mrpeterl.com">Blog</a>
           </li>
         </ul>
       </div>
