--- a/index.html
+++ b/index.html
@@ -210,22 +210,13 @@
               <i class="devicons devicons-jquery"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
+              <i class="devicons devicons-python"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-npm"></i>
