--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         "width": 761,
         "height": 315,
         "type": "png",
-        "url": "https://cdn-images-1.medium.com/max/1200/1*8npFbtSBgkb2gn4BdArshQ.png",
+        "url": "/img/cheetah.png",
         "palette": [
           "#c4a176",
           "#a48959",
@@ -344,7 +344,7 @@
         "width": 304,
         "height": 303,
         "type": "png",
-        "url": "https://cdn-images-1.medium.com/fit/c/304/304/1*mNmxddJJTzkiBfK77mWuGA.png",
+        "url": "/img/cheetah.png",
         "palette": [
           "#04abfc",
           "#040404",
