Added second blog and grid system

--- a/index.html
+++ b/index.html
@@ -305,10 +305,19 @@
       <div class="my-auto">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-          <p>
-            <a class="first-blog" data-size="large" href="https://codeburst.io/the-future-of-web-gotta-go-fast-91631fdadd6c"></a>
-          </p>
-          </section>
+          <div class="row">
+            <div class="col">
+              <p>
+                 <a class="first-blog" data-size="large" href="https://codeburst.io/the-future-of-web-gotta-go-fast-91631fdadd6c"></a>
+              </p>
+            </div>
+            <div class="col">
+              <p>
+                <a class="first-blog" data-size="large" href="https://codeburst.io/web-payments-2-slow-2-tedious-9734fbf51ca0"></a>
+              </p>
+            </div>
+          </div>
+        </section>
       </div>
     </section>
 
