--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="http://blog.mrpeterl.com">Blog</a>
+          <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
         </li>
       </ul>
     </div>
@@ -261,50 +261,10 @@
       </div>
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blog">
       <div class="my-auto">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2
-            <sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1
-              <sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3
-              <sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-      <div class="my-auto">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+        <h2 class="mb-5">Blog</h2>
+        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blog">
           <div class="row">
             <div class="col">
               <p>
