added google meta tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
+  <meta name="google-site-verification" content="rwKjl_s_1zF1MNzzNaJtvvfxY7j_6XDGUX8199D_OC4" />
+  
   <title>Peter James Lappin</title>
 
   <!-- Bootstrap core CSS -->
